tests/errors/substructural/check/copy_in_call_arg_of_non_copy.sim

        struct Linear { r: &out i64 }
        extern fn take(x: Linear);
        fn f(x: Linear) {
            entry:
            call take(copy x);
            return
        }
        